feat(borrowing): add atomic batch loans and harden hold lifecycle